changing the title in the readme

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Darkilouche for Gwibber
+Gilouche for Gwibber
 =======================
 
 To install, put this in ~/.local/share/gwibber/ui/themes/ and pick the theme from gwibber's preferences.
